@@ -47,6 +47,7 @@ module ActiveSupport
         @log = open(log, (File::WRONLY | File::APPEND))
         @log.sync = true
       else
+        FileUtils.mkdir_p(File.dirname(log))
         @log = open(log, (File::WRONLY | File::APPEND | File::CREAT))
         @log.sync = true
         @log.write("# Logfile created on %s" % [Time.now.to_s])
